Add support for cats-effect.
- cats-effect core.
- http4s.
- circe.
- jwt-scala circe

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ hs_err_pid*
 /zio-json/target/
 /jwt-scala-core/target/
 /jwt-scala-zio/target/
+/cats-effect/target/
+/http4s/target/
+/circe/target/
+/jwt-scala-circe/target/
 
 /.idea/
 /.bsp/
